<resources>
    <string name="app_name">NutriHawk</string>
    <string name="action_settings">Settings</string>
    <string name="check_status_text">Check Status</string>
    <string name="check_sources_text">Food Sources</string>
    <string name="check_status_menu_text">Current Status</string>
    <string name="specific_nutrient_menu_text">Nutrient</string>
    <string name="add_nutrient_menu_text">Add Nutrient</string>
    <string name="food_sources_menu_text">Food Sources</string>
    <string name="add_food_text">Add Food</string>
    <string name="most_in_need_of_text">Currently most in need of...</string>
    <string name="vitamin_filler_text">Vitamin A</string>
    <string name="status_title">Current Status</string>
    <string name="show_all_text">Show All</string>
    <string name="show_vitamins_only_text">Show Vitamins Only</string>
    <string name="show_minerals_only_text">Show Minerals Only</string>
    <string name="vitamin_A_description">Needed for good eyesight and normal functioning of the immune system.</string>
    <string name="vitamin_B1_description">Helps the body process carbohydrates and some protein.</string>
    <string name="vitamin_B2_description">Used in many body processes, such as converting food into energy. It also participates in the metabolism of many drugs and helps in the production of red blood cells.</string>
    <string name="vitamin_B3_description">Aids in digestion and converting food into energy. Also used by the body to help make cholesterol.</string>
    <string name="vitamin_B5_description">Helps release energy from carbohydrates, fats, and proteins and helps produce red blood cells.</string>
    <string name="vitamin_B6_description">Vital for a healthy nervous system. Helps the body break down proteins. Helps the body break down stored sugar.</string>
    <string name="vitamin_B7_description">Convert food into glucose, produce fatty acids and amino acids, and activate protein/amino acid metabolism in the hair roots and fingernail cells.</string>
    <string name="vitamin_B9_description">Utilize amino acids, produce nucleic acids, form blood cells in the bone marrow, ensure rapid cell growth in infancy, adolescence, and pregnancy, and control (together with vitamin B6 and vitamin B12) blood levels of the amino acid homocysteine.</string>
    <string name="vitamin_B12_description">Needed for creating red blood cells and general cell division.</string>
    <string name="vitamin_C_description">Helps promote a healthy immune system and is required to help make collagen, which holds cells together. It is also required for making chemical messengers in the brain.</string>
    <string name="vitamin_D_description">Needed to process calcium and maintain bone health. May have other effects on all cells of the body.</string>
    <string name="vitamin_E_description">Functions as an antioxidant.</string>
    <string name="vitamin_K_description">Helps clot blood and maintains bone health.</string>
    <string name="potassium_description">Aids in nervous system and muscle function. Also helps maintain a healthy balance of water in the blood and body tissues.</string>
    <string name="sodium_description">Balances fluids in the body, helps send nerve impulses, and needed for muscle contractions.</string>
    <string name="calcium_description">Helps build and maintain strong bones and teeth. Helps muscles function. Involved in cell communication and signaling.</string>
    <string name="phosphorus_description">Helps cells function normally and help the body make energy. Helps red blood cells deliver oxygen. Important in the formation of bone.</string>
    <string name="magnesium_description">Helps muscles and nerves function properly, steadies heart rhythm, maintains bone strength, and helps the body create energy and make proteins.</string>
    <string name="zinc_description">Vital to many internal processes and supports immune function, reproduction, and the nervous system.</string>
    <string name="iron_description">Needed to transport oxygen to all parts of the body via the red blood cells.</string>
    <string name="manganese_description">Involved in bone formation and wound healing, metabolism of proteins, cholesterol, and carbohydrates. It is also an antioxidant.</string>
    <string name="copper_description">Aids in metabolism of iron and red cell formation. Helps in the production of energy for cells.</string>
    <string name="iodine_description">Works to make thyroid hormones.</string>
    <string name="selenium_description">Helps protect cells from damage and regulates thyroid hormone action and other processes.</string>
    <string name="molybdenum_description">Plays a role in processing proteins and other substances.</string>
    <string name="vitamin_A_sources">Cod liver oil, sweet potatoes, carrots, leafy vegetables, and fortified foods such as breakfast cereals.</string>
    <string name="vitamin_B1_sources">Enriched, fortified, or whole-grain products such as bread, pasta, and cereals.</string>
    <string name="vitamin_B2_sources">Milk, breads, fortified cereals, almonds, asparagus, dark meat chicken, and cooked beef.</string>
    <string name="vitamin_B3_sources">Poultry, fish, meat, whole grains, and fortified cereals.</string>
    <string name="vitamin_B5_sources">Broccoli, turnip greens, tomatoes, strawberries, grapefruit, yogurt, yeast, liver, eggs, saltwater fish, whole wheat, peanuts, corn, whole rye flour, and legumes.</string>
    <string name="vitamin_B6_sources">Fortified cereals, fortified soy-based meat substitutes, baked potatoes with skin, bananas, light-meat chicken and turkey, eggs, and spinach.</string>
    <string name="vitamin_B7_sources">Raw vegetables like green peas, broccoli, cabbage, cauliflower, sweet potatoes, and green leafy vegetables like spinach, bananas, avocados, strawberries, raspberries, watermelon, grapefruit, nuts and grains, liver and kidney, and egg yolk.</string>
    <string name="vitamin_B9_sources">Legumes, chickpeas, soybeans, lentils, citrus fruits, wheat bran, fortified cereal, barley, poultry, pork, shellfish, salmon, tuna, milk, asparagus, brocolli, avocados, brussell sprouts, savoy, and leafy greens.</string>
    <string name="vitamin_B12_sources">Beef, clams, mussels, crabs, salmon, poultry, soybeans, and fortified foods.</string>
    <string name="vitamin_C_sources">Citrus fruits, red berries, tomatoes, potatoes, broccoli, cauliflower, brussels sprouts, red and green bell peppers, cabbage, and spinach.</string>
    <string name="vitamin_D_sources">Fortified milk, cheese, and cereals; egg yolks; salmon; and sunlight.</string>
    <string name="vitamin_E_sources">Leafy green vegetables, almonds, hazelnuts, and vegetable oils like sunflower, canola, and soybean.</string>
    <string name="vitamin_K_sources">Leafy green vegetables like parsley, chard, and kale; olive, canola, and soybean oils; and broccoli.</string>
    <string name="potassium_sources">Broccoli, potatoes (with the skins on), prune juice, orange juice, leafy green vegetables, bananas, raisins, and tomatoes.</string>
    <string name="sodium_sources">Table salt, baking soda, monosodium glutamate (MSG), various seasonings, additives, condiments, meat, fish, poultry, dairy foods, eggs, smoked meats, olives, and pickled foods.</string>
    <string name="calcium_sources">Dairy products, broccoli, dark leafy greens like spinach and rhubarb, and fortified products, such as orange juice, soy milk, and tofu.</string>
    <string name="phosphorus_sources">Dairy products, beef, chicken, halibut, salmon, eggs, and whole wheat breads.</string>
    <string name="magnesium_sources">Whole grain products, leafy green vegetables, almonds, Brazil nuts, soybeans, halibut, peanuts, hazelnuts, lima beans, black-eyed peas, avocados, bananas, kiwifruit, and shrimp.</string>
    <string name="zinc_sources">Red meat, fortified cereals, oysters, almonds, peanuts, chickpeas, soy foods, and dairy products.</string>
    <string name="iron_sources">Leafy green vegetables, beans, shellfish, red meat, eggs, poultry, soy foods, and some fortified foods.</string>
    <string name="manganese_sources">Pecans, almonds, legumes, green and black tea, whole grains, and pineapple juice.</string>
    <string name="copper_sources">Organ meats, seafood, cashews, sunflower seeds, wheat bran cereals, whole grain products, and cocoa products.</string>
    <string name="iodine_sources">Iodized salt, certain seafoods, kelp, and seaweed.</string>
    <string name="selenium_sources">Organ meats, shrimp, crabs, salmon, halibut, and Brazil nuts.</string>
    <string name="molybdenum_sources">Legumes, grain products, and nuts.</string>
    <string name="vitamin_A_deficiency">Night blindness; reduced hair growth in children; loss of apetite; dry, rough skin; lowered resistance to infection; dry eyes.</string>
    <string name="vitamin_B1_deficiency">Anxiety; hysteria; depression; muscle cramps; loss of appetite; in extreme cases beriberi (mostly in alcoholics).</string>
    <string name="vitamin_B2_deficiency">Cracks and sores around the mouth and nose; visual problems.</string>
    <string name="vitamin_B3_deficiency">In extreme cases, pellagra, a disease characterized by dermatitis, diarrhea and mouth sores.</string>
    <string name="vitamin_B5_deficiency">Rare. Burning sensations in the hands and feet and numbness coupled with poor coordination.</string>
    <string name="vitamin_B6_deficiency">Anemia, irritability, patches of itchy, scaling skin; convulsions.</string>
    <string name="vitamin_B7_deficiency">Seborrhic dermatitis in infants. Rare in adults, but can be induced by consuming large amounts of egg whites – anorexia, nausea, vomiting, dry scaly skin.</string>
    <string name="vitamin_B9_deficiency">Impaired cell division; anemia; diarrhea; gastrointestinal upsets.</string>
    <string name="vitamin_B12_deficiency">Pernicious anemia; nerve damage. Deficiency rare except in strict vegetarians, the elderly or people with malabsorption disorders.</string>
    <string name="vitamin_C_deficiency">Muscle weakness, bleeding gums; easy bruising. In extreme cases, scurvy.</string>
    <string name="vitamin_D_deficiency">Rickets in children; bone softening in adults; osteoporosis.</string>
    <string name="vitamin_E_deficiency">Rare, seen primarily in premature or low birth weight babies or children who do not absorb fat properly. Causes nerve abnormalities.</string>
    <string name="vitamin_K_deficiency">Defective blood coagulation.</string>
    <string name="potassium_deficiency">Nausea, anorexia, muscle weakness, irritability. Occurs most often in persons with prolonged diarrhea.</string>
    <string name="sodium_deficiency">Hyponatremia. Symptoms of moderate hyponatremia include tiredness, disorientation, headache, muscle cramps, and nausea.</string>
    <string name="calcium_deficiency">Muscle cramps, Brain function, Rickets in children; osteomalacia (soft bones) and osteoporosis in adults.</string>
    <string name="phosphorus_deficiency">Rare. Weakness; bone pain; Anorexia.</string>
    <string name="magnesium_deficiency">Nausea, irritability, muscle weakness; twitching; cramps, cardiac arrhythmias.</string>
    <string name="zinc_deficiency">Slow healing of wounds; loss of taste; retarded growth and delayed sexual development in children.</string>
    <string name="iron_deficiency">Skin pallor; weakness; fatigue; headaches; shortness of breath, difficulty concentrating, brittle nails, cracked lips  </string>
    <string name="manganese_deficiency">Impaired growth, reproduction, skeletal system, glucose tolerance, altered carbohydrate and lipid metabolism</string>
    <string name="copper_deficiency">Anemia that is unresponsive to iron therapy but corrected by copper. Low WBC’s thus lower immunity. Rare in adults. Infants may develop a type of anemia marked by abnormal development of bones, nerve tissue and lungs.</string>
</resources>