<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/green" >
    
    <Button
        android:layout_marginTop="50dp"
        android:id="@+id/check_status_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_status_text"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/green"
        android:fontFamily="fonts/mensch-bold.ttf"
        android:background="@drawable/home_button"
        android:paddingRight="35dp"
        android:paddingLeft="35dp"
        />
    
    <Button
        android:id="@+id/add_food_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_food_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textColor="@color/green"
        android:fontFamily="fonts/mensch-bold.ttf"
        android:background="@drawable/home_button"
        android:paddingRight="60dp"
        android:paddingLeft="60dp"
        />
    
    <LinearLayout 
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="80dp"
      	android:paddingBottom="20dp"
        android:gravity="left"
        android:orientation="vertical"
        android:background="@drawable/bubble_green">
    
	    <TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:gravity="center"
		    android:text="@string/most_in_need_of_text"
		    android:textSize="15sp"
		    android:textColor="@color/green"
		    android:fontFamily="fonts/Bariol_Regular.otf"
		/>
	
	    <TextView
	        android:id="@+id/most_in_need"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/vitamin_filler_text"
	        android:fontFamily="fonts/mensch-bold.ttf"
	        android:textColor="@color/green"
	        android:textSize="20sp" />
	    
	</LinearLayout>
    
    <ImageView
        android:layout_width="250dp"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom|right"
        android:scaleType="fitEnd"
        android:background="@color/green"
        android:src="@drawable/hawk_bg" />
   

</LinearLayout>
