<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/lite_grey">
        <Button
            android:id="@+id/show_all_button"
            android:layout_width="0dp"
            android:textColor="@color/green"
            android:layout_height="fill_parent"
            android:padding="10dp"
            android:layout_weight="1"
            android:background="@drawable/show_all_button"
            android:fontFamily="fonts/mensch-bold.ttf"
            android:text="@string/show_all_text" />


        <Button
            android:layout_weight="1"
            android:id="@+id/show_vitamins_only_button"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:textColor="@color/green"
            android:padding="10dp"
            android:background="@drawable/show_button"
            android:fontFamily="fonts/mensch-bold.ttf"
            android:text="@string/show_vitamins_only_text" />
        
        <Button
            android:layout_weight="1"
            android:id="@+id/show_minerals_only_button"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:textColor="@color/green"
            android:padding="10dp"
            android:background="@drawable/show_button"
            android:fontFamily="fonts/mensch-bold.ttf"
            android:text="@string/show_minerals_only_text" />
    </LinearLayout>
    
    <RelativeLayout
    android:id="@+id/RelativeLayout01" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:paddingRight="20dp"
    android:paddingLeft="20dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:background="@color/green">

    <TextView 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:text="Nutrient"
        android:textSize="12sp"
        android:layout_alignParentLeft="true" 
        android:textColor="@color/white" />

    <TextView 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_alignParentRight="true" 
        android:textSize="12sp"
        android:text="Last Intake"
        android:textColor="@color/white"/>

</RelativeLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </ListView>

</LinearLayout>